[package]
name = "RoggingHub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
simd-json = "0.14"
bytes = "1"
chrono = "0.4"
memchr = "2"
memmap2 = "0.9"
rustix = { version = "1", features = ["fs"] }
socket2 = { version = "0.5", features = ["all"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
axum = "0.8"
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br", "compression-zstd"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3"
